--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0"
+    "react-hook-form": "^7.48.2",
+    "react-router-dom": "^6.18.0",
+    "react-step-wizard": "^5.3.11"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.3",
