--- a/package.json
+++ b/package.json
@@ -12,11 +12,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@mantine/core": "^7.2.2",
+    "@mantine/dates": "^7.2.2",
+    "@mantine/form": "^7.2.2",
+    "@mantine/hooks": "^7.2.2",
+    "@mantine/modals": "^7.2.2",
+    "@tabler/icons-react": "^2.41.0",
+    "clsx": "^2.0.0",
+    "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
-    "react-router-dom": "^6.18.0",
-    "react-step-wizard": "^5.3.11"
+    "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.3",
@@ -43,14 +50,15 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.31",
+    "postcss-preset-mantine": "^1.11.0",
+    "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.1.0",
     "react-test-renderer": "^18.2.0",
     "sass": "^1.69.5",
     "tailwindcss": "^3.3.5",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6",
-    "vite": "^4.4.5"
+    "typescript": "^5.1.6"
   },
   "jest": {
     "automock": false,
